--- a/reactprojetofinal/src/index.css
+++ b/reactprojetofinal/src/index.css
@@ -28,6 +28,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  padding: 0;
+  border: 1px solid red;
 }
 
 h1 {
@@ -66,3 +68,4 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
