--- a/reactprojetofinal/src/styles/Sobre.module.css
+++ b/reactprojetofinal/src/styles/Sobre.module.css
@@ -1,23 +1,75 @@
-.container {
-    padding: 20px;
-  }
-  
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-    gap: 20px;
-  }
-  
-  .card {
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    padding: 16px;
-    text-align: center;
-  }
-  
-  .image {
-    width: 100%;
-    height: auto;
-    border-radius: 8px;
-  }
-  
+* {
+  font-family: sans-serif;
+}
+
+body {
+  background-color: #e1e6ec;
+}
+
+.heading {
+  font-family: sans-serif;
+  text-align: center;
+}
+
+.cardBox {
+  width: 100%;
+  height: 100%;
+  max-width: 36em;
+  min-height: 16em;
+  margin: auto;
+  padding: 0;
+  border-radius: 1em;
+  background-color: #ffffff;
+  box-shadow: rgb(197, 197, 197) 0px 0px 5px 2px;
+}
+
+.contents {
+  width: auto;
+  height: auto;
+  display: flex;
+  margin: 1em;
+  margin-top: 2em;
+  padding: 1em 0.5em;
+  justify-content: space-between;
+}
+
+.divider {
+  width: 100%;
+  height: 100%;
+  max-width: 36em;
+  max-height: 4.9em;
+  border-start-start-radius: 1em;
+  border-start-end-radius: 1em;
+  position: absolute;
+  background-color: #3cabff;
+  z-index: 0;
+}
+
+.nameHeader {
+  z-index: 1;
+}
+
+.details {
+  width: 100%;
+  height: 100%;
+  margin-top: 4em;
+  color: #000000;
+}
+
+.img {
+  z-index: 1;
+}
+
+img {
+  border: 0.35em solid rgb(255, 255, 255);
+  border-radius: 100%;
+  width: 100px;
+  min-width: 100px;
+}
+a:visited {
+  color: rgb(0, 0, 0);
+}
+a {
+  color:#000000;
+  text-decoration: none;
+}
