--- a/reactprojetofinal/src/index.css
+++ b/reactprojetofinal/src/index.css
@@ -1,3 +1,6 @@
+@import '~primereact/resources/themes/saga-blue/theme.css';
+@import '~primereact/resources/primereact.min.css';
+@import '~primeicons/primeicons.css';
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
