--- a/reactprojetofinal/src/styles/Home.module.css
+++ b/reactprojetofinal/src/styles/Home.module.css
@@ -1,7 +1,3 @@
-html {
-  font-size: 14px;
-}
-
 body {
   font-family: var(--font-family);
   font-weight: normal;
@@ -11,16 +7,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
-.card {
-  background: var(--surface-card);
-  padding: 2rem;
-  border-radius: 10px;
-  margin-bottom: 1rem;
+.lista {
+  border: 1px solid red;
 }
-.container {
-    padding: 20px;
-  }
+
+
   
   
     
